# bb-hackathon

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: main.py
backend/alembic/: env.py
backend/alembic/versions/: 2025-01-28_.py  2025-01-30_.py  2025-02-01_.py
backend/api/: admin.py  auth.py  business.py  fair.py  payment.py  place.py  qrcode.py  reservation.py
backend/core/: config.py
backend/crud/: admin.py  base.py  business.py  fair.py  payment.py  place.py  reservation.py
backend/db/: session.py
backend/models/: __init__.py  admin.py  base.py  business.py  fair.py  payment.py  place.py  reservation.py  userbase.py
backend/schemas/: admin.py  business.py  fair.py  payment.py  place.py  reservation.py  token.py
backend/services/: auth.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: revuca.geo.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  serverutils.tsx
frontend/src/components/: button.tsx  inputField.tsx  map.tsx  sidebar.tsx
frontend/src/pages/: login.tsx  register.tsx
frontend/src/pages/user/: fairs.tsx  myFair.tsx  organizationRules.tsx  payments.tsx  profile.tsx  reservationRules.tsx
