[project]
name = "bb-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "starlette[full] (>=0.45.3,<0.46.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-extra-types (>=2.10.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
